# ShieldLI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
github/workflows/: ci.yml
src/shieldli/: main.py
tests/: test_integration.py  test_unit.py
