[project]
name = "shieldli"
version = "0.21"
description = "file manipulation CLI"
requires-python = ">=3.9"
dependencies = []
authors = [{ name = "Albert Gil" }]
readme = "README.md"

[project.scripts]
shieldli = "shieldli.main:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]